refactor(navi-boot-security): use `getFirst()` for improved readability when fetching audience